--- a/public/setting.html
+++ b/public/setting.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>code-vault setting</title>
   </head>
-  <body></body>
+  <body>
+    <script type="text/javascript" src="setting.js"></script>
+  </body>
 </html>
