feat: login, logout

--- a/src/dev.html
+++ b/src/dev.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dev</title>
   </head>
-  <body></body>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
