--- a/public/setting.html
+++ b/public/setting.html
@@ -6,6 +6,7 @@
     <title>code-vault setting</title>
   </head>
   <body>
+    <div id="app"></div>
     <script type="text/javascript" src="setting.js"></script>
   </body>
 </html>
